# uniquely-decodable

./: .gitignore  Cargo.toml  LICENSE  readme.markdown
benches/: check_unique_decodability.rs  long_not_ud_list.rs  long_ud_list.rs  medium_list.rs  medium_lists.rs  short_list.rs  short_lists.rs
benches/lists/: long-not-ud.txt  long-ud.txt  short-ud-list.txt
src/: colfenor_rodeh.rs  lib.rs  main.rs  sardinas_patterson.rs  schlinkert.rs
tests/: uniquely_decodable_tests.rs
