[package]
name = "uniquely_decodable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "short_lists"
harness = false

[[bench]]
name = "medium_lists"
harness = false
