[package]
name = "uniquely_decodable"
version = "0.1.0"
edition = "2021"
default-run = "uniquely_decodable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "short_list"
harness = false

[[bench]]
name = "medium_list"
harness = false

[[bench]]
name = "long_ud_list"
harness = false

[[bench]]
name = "long_not_ud_list"
harness = false
