[package]
name = "uniquely_decodable"
version = "0.1.0"
edition = "2021"
default-run = "uniquely_decodable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "short_list"
harness = false

[[bench]]
name = "medium_list"
harness = false

[[bench]]
name = "long_ud_list"
harness = false

[[bench]]
name = "long_not_ud_list"
harness = false

[lib]
bench = false

[[bin]]
name = "uniquely_decodable"
path = "src/main.rs"
bench = false

[[bin]]
name = "colfenor_rodeh"
path = "src/bin/colfenor_rodeh.rs"
bench = false

[[bin]]
name = "schlinkert"
path = "src/bin/schlinkert.rs"
bench = false
